finish email meeting email

--- a/templates/email/contact_for_contract_data.html
+++ b/templates/email/contact_for_contract_data.html
@@ -10,19 +10,17 @@
              <tr>
                 <td align="center" bgcolor="#f6f6f6">
                     <img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>
-                    <!--<img alt="logo" width="100%" height="auto" style="display: block;" src="cid:logo_slim.png"/>-->
                 </td>
             </tr>
 			<tr>
 				<td>
 					<img alt="" class="header_img" src="cid:main_picture_contract.png"/>
-					<!--<img alt="" class="header_img" width="100%" src="cid:main_picture_contract.png" />-->
 				</td>
 			</tr>
 
             <tr>
                 <td bgcolor="#f6f6f6" style="padding: 10px 15px;">
-                    <h3>Olá <samp style="color: #000; font-weight: bolder;">{0}!</samp></h3>
+                    <h3>Your Cont, contratos para: <samp style="color: #000; font-weight: bolder;">{0}!</samp></h3>
 
                     <p style="text-indent: 1.5em;">
                         Agora que você já escolheu a Yourcont como sua parceira em sua jornada empreendedora, 
@@ -59,12 +57,10 @@
                 <td style="background-color: #828AC5; padding: 5px 5px 5px 5px;">
                     <a href="https://www.facebook.com" style="margin: 5px; padding: 5px; text-decoration:none;">
                         <img class="my_net_icon" alt src="cid:footer_icon_facebook.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
-                        <!--<img width="20" height="20" alt="" src="cid:footer_icon_facebook.png" />-->
                     </a>
 
                     <a href="https://www.instagram.com/" style="margin: 5px; padding: 5px; text-decoration:none;">
                         <img class="my_net_icon" alt src="cid:footer_icon_instagram.png" style="background: #f6f6f6; border: 2px solid #000; height: 20px; margin: 4px; padding: 3px; width: 20px;">
-                        <!--<img width="20" height="20"  alt="" src="cid:footer_icon_instagram.png" />-->
                     </a>
                 </td>
             </tr>
