--- a/templates/email/meeting_solicitation_email.html
+++ b/templates/email/meeting_solicitation_email.html
@@ -38,6 +38,7 @@
                     <h3>
 					    Olá <samp style="color: #000; font-weight: bolder;">{0}!</samp>
 				    </h3>
+                    <p>Agora que você já concluiu duas etapas, queremos saber o melhor horário para nossa reunião por vídeo chamada.</p>
                     <p style="text-indent: 1.5em;">Podemos agenda no dia {date} as {hour1} ou  {hour2}</p>
                     <p style="text-indent: 1.5em;">Envie um email a <a href="mailto:atendimento@yourcont.com.br?Subject=Confirmação de data" target="_top"> atendimento@yourcont.com.br </a> com o titulo: <b>Confirmação de data</b> para a confirmação de nossa reunião online.</p>
                     <p>Link da reunião {link}</p>
