finish link to call

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {%extends "template.html"%}
 {% block conteudo%}
+Escolha um email para enviar:
 <div  class="row">
     {% for email in cards_email %}
         <div class="card col-3" >
